# cryptoprices

./: .gitignore  README.md  cryptoprices.conf  main.py  requirements.txt  setup.cfg
cryptoprices.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cryptoprices/api/: bittrex.py  coinbase_pro.py  kraken.py  kucoin.py  tick.py
