[metadata]
# replace with your username:
name = cryptoprices
version = 0.0.1
author = Addison Snelling
author_email = addison@asnell.io
description = Monitor crypto prices from multiple exchanges
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asnelling/cryptoprices
project_urls =
    Bug Tracker = https://github.com/asnelling/cryptoprices/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Intended Audience :: Financial and Insurance Industry
    Topic :: Office/Business :: Financial :: Investment

[options]
packages = find:
python_requires = >=3.6
install_requires =
    websockets >= 9.0
    signalr-client-aio >= 0.0
    influxdb-client >= 1.17

[options.entry_points]
console_scripts =
    cryptoprices = main:main
